--- a/lib/app_component.css
+++ b/lib/app_component.css
@@ -1,3 +1,9 @@
 :host {
     /* This is equivalent of the 'body' selector of a page. */
 }
+h1 {
+    color: rgb(231, 164, 19);
+    font-family: 'Open Sans', sans-serif;
+   font-size: 40px;
+   font-weight: normal;
+  }
