--- a/lib/src/hero/hero_list_component.css
+++ b/lib/src/hero/hero_list_component.css
@@ -47,7 +47,7 @@
 }
 button {
   font-family: Arial;
-  background-color: #eee;
+  background-color: rgb(130, 149, 231);
   border: none;
   padding: 5px 10px;
   border-radius: 4px;
