--- a/lib/src/print/print_component.css
+++ b/lib/src/print/print_component.css
@@ -1,59 +1,21 @@
-.selected {
-  background-color: #CFD8DC !important;
-  color: white;
-}
-.heroes {
-  margin: 0 0 2em 0;
-  list-style-type: none;
-  padding: 0;
-  width: 15em;
-}
-.heroes li {
-  cursor: pointer;
-  position: relative;
-  left: 0;
-  background-color: #EEE;
-  margin: .5em;
-  padding: .3em 0;
-  height: 1.6em;
-  border-radius: 4px;
-}
-.heroes li:hover {
-  color: #607D8B;
-  background-color: #DDD;
-  left: .1em;
-}
-.heroes li.selected:hover {
-  background-color: #BBD8DC !important;
-  color: white;
-}
-.heroes .text {
-  position: relative;
-  top: -3px;
-}
-.heroes .badge {
-  display: inline-block;
-  font-size: small;
-  color: white;
-  padding: 0.8em 0.7em 0 0.7em;
-  background-color: #607D8B;
-  line-height: 1em;
-  position: relative;
-  left: -1px;
-  top: -4px;
-  height: 1.8em;
-  margin-right: .8em;
-  border-radius: 4px 0 0 4px;
-}
+
 button {
+  
+  margin-top: 30px;
   font-family: Arial;
-  background-color: rgb(241, 237, 237);
+  background-color: rgb(212, 211, 211);
   border: none;
-  padding: 5px 10px;
+  padding: 10px 220px;
   border-radius: 4px;
-  cursor: pointer;
-  cursor: hand;
+  cursor: pointer; cursor: hand;
 }
+
 button:hover {
   background-color: #cfd8dc;
+}
+h2 {
+  color: rgb(231, 164, 19);
+  font-family: 'Open Sans', sans-serif;
+ font-size: 20px;
+ font-weight: normal;
 }
