--- a/lib/src/register/register_component.css
+++ b/lib/src/register/register_component.css
@@ -1,8 +1,8 @@
 #content{
     background-color: rgba(255, 255, 255, 0.95);
     width: 420px;
-    height: 500px;
-    box-shadow:0 0 9px #c7ddef;
+    height: 300px;
+    
     border-radius: 6px;
     padding: 10px;
     margin-top: 7%;
@@ -47,7 +47,7 @@ form material-input{
 }
 
 .blue {
-    background: mediumslateblue;
+    background: rgb(76, 75, 77);
     color: white;
     width: 80%;
     margin-bottom: 10px;
